2005-12-20 Fixed Jame's Boyles date tick reversal problem - JDH

2005-12-20 Added Jouni's rc patch to support lists of keys to set on -
           JDH

2005-12-12 Updated pyparsing (mathtext now a bit faster) and minor
           fixes to scipy numerix and setuptools

2005-12-12 Matplotlib data is now installed as package_data in
           the matplotlib module.  This gets rid of checking the
           many possibilities in matplotlib._get_data_path() - CM

2005-12-11 Support for setuptools/pkg_resources to build and use
           matplotlib as an egg. Still allows matplotlib to exist
           using a traditional distutils install. - ADS

2005-12-03 Modified setup to build matplotlibrc based on compile time
           findings.  It will set numerix in the order of scipy,
           numarray, Numeric depending on which are founds, and
           backend as in preference order GTKAgg, WXAgg, TkAgg, GTK,
           Agg, PS

2005-12-03 Modified scipy patch to support Numeric, scipy and numarray
	   Some work remains to be done because some of the scipy
	   imports are broken if only the core is installed.  Eg
	   apparently we need from scipy.basic.fftpack import * rather
	   than from scipy.fftpack import *

2005-12-03 Applied some fixes to Nicholas Young's nonuniform image
           patch

2005-12-01 Applied Alex Gontmakher hatch patch - PS only for now

2005-11-30 Added Rob McMullen's EMF patch

2005-11-30 Added Daishi's patch for scipy

2005-11-30 Fixed out of bounds draw markers segfault in agg

2005-11-28 Got TkAgg blitting working 100% (cross fingers) correctly. - CM

2005-11-27 Multiple changes in cm.py, colors.py, figure.py, image.py,
           contour.py, contour_demo.py; new _cm.py, examples/image_masked.py.
           1) Separated the color table data from cm.py out into
           a new file, _cm.py, to make it easier to find the actual
           code in cm.py and to add new colormaps.  Also added